# julia-set

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  README.md  main.c
include/: constants.h
src/: CMakeLists.txt  constants.h  main.c
src/app/: CMakeLists.txt  app.c  app.h  counter.c  counter.h
src/include/: constants.h
src/julia_set/: CMakeLists.txt  julia_set.c  julia_set.h  julia_set.s
src/queue/: CMakeLists.txt  queue.c  queue.h
src/renderer/: renderer.h
src/tpool/: CMakeLists.txt  tpool.c  tpool.h
